# gmenuharness

./: CMakeLists.txt  INSTALL  README  TODO
cmake/: FindValgrind.cmake
debian/: changelog  control  control.in  copyright  gen-debian-files.sh  libgmenuharness-dev.install  libgmenuharness-dev.install.in  libgmenuharness.install.in  libgmenuharness.symbols.in  libgmenuharness0.1.symbols  libgmenuharness0.1.vivid.symbols  libgmenuharness0.1.xenial.symbols  libgmenuharness0.1.yakkety.symbols  libgmenuharness0.1.zesty.symbols  rules  shlibs.in
include/: CMakeLists.txt  MenuItemMatcher.h  MenuMatcher.h
include/unity/gmenuharness/: MenuItemMatcher.h
src/: CMakeLists.txt  MatchResult.cpp  MatchUtils.cpp  MenuItemMatcher.cpp  MenuMatcher.cpp  libgmenuharness.map  libgmenuharness.pc.in
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  FunctionalTests.cpp  functional-tests.cpp
tests/functional/menus/: CMakeLists.txt  Deeper.cpp  deeper.cpp  menu-main.cpp  simple.cpp
tests/unit/: TestMatchResult.cpp
tests/utils/: CMakeLists.txt  TestMain.cpp
